# yap

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  ruff.toml
docs/: index.html
scripts/: build_app.py  dataset.json  optimize_prompt.py  optimized_cleanup.json
tests/: test_llm_style.py  test_menubar.py  test_styles.py  test_toggle.py
yap/: __init__.py  __main__.py  app.py  audio.py  cli.py  config.py  inject.py  llm.py  menubar.py  perms.py  stt.py  styles.py
