[project]
name = "yap"
version = "0.1.0"
description = "Local, on-device voice dictation for macOS (parakeet-mlx)"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.6",
    "parakeet-mlx>=0.5.1",
    "pynput>=1.8.2",
    "rumps>=0.4.0",
    "sounddevice>=0.5.5",
]

[project.scripts]
yap = "yap.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["yap"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]